---
title: ISA-95 Part 2 ER Diagram (as implemented in MES AI)
---
erDiagram
    ProductDefinition           ||--o{ RouteProductAssignment : ""
    ProcessRoute_OpsDefinition  ||--o{ RouteProductAssignment : ""

    ProcessRoute_OpsDefinition ||--o{ RouteStep_ProcessSegment : "ordered segments"
    ProcessRoute_OpsDefinition ||--o{ RouteMaterialAssignment  : "allowed materials"

    RouteStep_ProcessSegment ||--o{ StepEquipmentRequirement : "equipment requirement (specific)"
    RouteStep_ProcessSegment }o--|| EquipmentClass            : "equipment requirement (class)"
    RouteStep_ProcessSegment ||--o{ StepMaterialRequirement   : "material requirement"
    RouteStep_ProcessSegment ||--o{ StepParameter             : "data collection spec"
    RouteStep_ProcessSegment ||--o{ StepTransition            : "outgoing / incoming"

    StepEquipmentRequirement }o--|| Equipment           : "specific unit"
    StepMaterialRequirement  }o--|| MaterialDefinition  : "material"

    EquipmentClass ||--o{ EquipmentClassProperty : "typed property spec"
    EquipmentClass ||--o{ Equipment              : "classifies"
    EquipmentClass ||--o{ EquipmentCapability    : "capability kind"

    Equipment ||--o{ EquipmentCapability : "declares"
    EquipmentCapability ||--o{ EquipmentCapabilityProperty : "property values"
    EquipmentCapabilityProperty }o--|| EquipmentClassProperty : "conforms to"

    ProductionOrder_OpsRequest }o--|| ProductDefinition          : "product"
    ProductionOrder_OpsRequest }o--|| ProcessRoute_OpsDefinition : "assigned route"
